# Qt_QML_MultimediaPlayer

./: CMakeLists.txt  Grid_1.qml  Grid_2.qml  Main.qml  README.md  StackViewP.qml  Station.qml  StatusBar.qml  main.cpp
